# veides-sdk-c

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  veides_version.h.in
docker/: Dockerfile.template  check.sh  generateDockerfile.sh
samples/: CMakeLists.txt  CMakeLists.txt.dist  README.md  apiBasic.c  streamHubBasic.c
tests/: veides_api_client.cpp  veides_api_client_properties.cpp  veides_stream_hub_client.cpp  veides_stream_hub_client_properties.cpp
veides_api_client/include/veides_api_client/: veides_api_client.h  veides_base_client.h  veides_internal.h  veides_properties.h
veides_api_client/src/: veides_api_client.c  veides_base_client.c  veides_properties.c
veides_stream_hub_client/include/veides_stream_hub_client/: veides_base_client.h  veides_internal.h  veides_properties.h  veides_stream_hub_client.h
veides_stream_hub_client/src/: veides_base_client.c  veides_properties.c  veides_stream_hub_client.c
veides_utils_shared/include/veides_utils_shared/: veides_logger.h  veides_logger_p.h  veides_rc.h  veides_utils.h
veides_utils_shared/src/: veides_logger.c  veides_utils.c
